# webui-wire

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  apple_utils.h  apple_utils.mm  application_t.cpp  application_t.h  default_css.cpp  default_css.h  event_t.cpp  event_t.h  eventqueue_t.cpp  eventqueue_t.h  execjs.cpp  execjs.h  httpresponse_t.cpp  httpresponse_t.h  httpserver_t.cpp  httpserver_t.h  i_webui_wire.cpp  i_webui_wire.h  main.cpp  main_apple.mm  menu_t.cpp  menu_t.h  menubar_t.cpp  menubar_t.h  mimetypes_t.cpp  mimetypes_t.h  misc.cpp  misc.h  object_t.cpp  object_t.h  readlineinthread.cpp  readlineinthread.h  test.html  timer_t.cpp  timer_t.h  (+11 more)
.github/workflows/: cmake-flatpak.yml  cmake-ubuntu-latest.yml  cmake-ubuntu.yml  cmake-windows-arm.yml  cmake-windows.yml
flatpak/: Makefile  nl.dijkewijk.webui-wire.desktop  nl.dijkewijk.webui-wire.json  nl.dijkewijk.webui-wire.json.in  v.c
include/: i_webui_wire.h  webui_wire.h  webuiwindow.h  webwirehandler.h  webwireprofile.h  webwirestandarddialogs.h
include/base/: application_t.h  eventqueue_t.h  object_t.h  timer_t.h
include/utils/: fileinfo_t.h  is_utf8.h  json.h  misc.h  utf8_strings.h  utf8_utils.h  variant_t.h  webui_utils.h
js/: menu.js
src/: default_css.cpp  execjs.cpp  i_webui_wire.cpp  main.cpp  readlineinthread.cpp  webuiwindow.cpp  webwirehandler.cpp  webwireprofile.cpp  webwirestandarddialogs.cpp
src/base/: object_t.cpp
src/utils/: fileinfo_t.cpp  is_utf8.c  json.cpp  misc.cpp  utf8_strings.cpp  utf8_utils.c  utf8_utils.cpp  webui_utils.cpp
support/: mimetypes.csv
